fixing Duration